force-app/main/default/objects/Dispatch_Staging__c/Dispatch_Staging__c.object-meta.xml
<CustomObject>
    <description>Staging object for loading Dispatch records</description>
    <label>Dispatch Staging</label>
    <nameField>
        <displayFormat>DL{000000}</displayFormat>
        <label>Dispatch Load ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dispatch Staging</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>