force-app/main/default/objects/Dispatch_Staging__c/fields/Actual_Date_of_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_of_Check_In__c</fullName>
    <label>Actual Date of Check In</label>
    <type>Date</type>
</CustomField>