force-app/main/default/objects/Dispatch_Staging__c/fields/Actual_Loading_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Loading_Start_Time__c</fullName>
    <label>Actual Loading Start Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>