force-app/main/default/objects/Dispatch_Staging__c/fields/Bottle_Description__c.field-meta.xml
<CustomField>
    <fullName>Bottle_Description__c</fullName>
    <label>Bottle Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>