force-app/main/default/objects/Dispatch_Staging__c/fields/Bottle_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Bottle_Identifier__c</fullName>
    <description>Unique identifier for the product/SKU</description>
    <label>Bottle Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>