force-app/main/default/objects/Dispatch_Staging__c/fields/Bottles__c.field-meta.xml
<CustomField>
    <fullName>Bottles__c</fullName>
    <description>Number of bottles</description>
    <label>Bottles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>