force-app/main/default/objects/Dispatch_Staging__c/fields/Concat_Id__c.field-meta.xml
<CustomField>
    <fullName>Concat_Id__c</fullName>
    <label>Concat Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>