force-app/main/default/objects/Dispatch_Staging__c/fields/Current_Date_for_Start_of_Loading__c.field-meta.xml
<CustomField>
    <fullName>Current_Date_for_Start_of_Loading__c</fullName>
    <label>Current Date for Start of Loading</label>
    <type>Date</type>
</CustomField>