force-app/main/default/objects/Dispatch_Staging__c/fields/Delivery_Code__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Code__c</fullName>
    <label>Delivery Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>