force-app/main/default/objects/Dispatch_Staging__c/fields/Dispatch_Time__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Time__c</fullName>
    <label>Dispatch Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>