force-app/main/default/objects/Dispatch_Staging__c/fields/End_of_Planning_Date__c.field-meta.xml
<CustomField>
    <fullName>End_of_Planning_Date__c</fullName>
    <label>End of Planning Date</label>
    <type>Date</type>
</CustomField>