force-app/main/default/objects/Dispatch_Staging__c/fields/First_Monday_of_Month__c.field-meta.xml
<CustomField>
    <fullName>First_Monday_of_Month__c</fullName>
    <formula>DATE(YEAR( Planned_Delivery_Date__c ), MONTH(Planned_Delivery_Date__c), 1) +
  CASE(MOD(DATE(YEAR(Planned_Delivery_Date__c), MONTH(Planned_Delivery_Date__c), 1) - DATE(2000, 1, 3), 7),
    1, -1,
    2, -2,
    3, -3,
    4, -4,
    5, -5,
    6, -6,
    0
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Monday of Month</label>
    <type>Date</type>
</CustomField>