force-app/main/default/objects/Dispatch_Staging__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <formula>Month__c &amp; &quot;-&quot; &amp; Bottle_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast</label>
    <type>Text</type>
</CustomField>