force-app/main/default/objects/Dispatch_Staging__c/fields/Forecast_SAP__c.field-meta.xml
<CustomField>
    <fullName>Forecast_SAP__c</fullName>
    <description>Formula for forecast key - material code level</description>
    <formula>Month__c &amp;&quot;-&quot;&amp;  Bottle_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast_SAP</label>
    <type>Text</type>
</CustomField>