force-app/main/default/objects/Dispatch_Staging__c/fields/Freight_Reference__c.field-meta.xml
<CustomField>
    <fullName>Freight_Reference__c</fullName>
    <label>Freight Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>