force-app/main/default/objects/Dispatch_Staging__c/fields/Haulier_Code__c.field-meta.xml
<CustomField>
    <fullName>Haulier_Code__c</fullName>
    <label>Haulier Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>