force-app/main/default/objects/Dispatch_Staging__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>TEXT( Sales_Organization__c )&amp; &quot;-&quot; &amp; LPAD(Encirc_Account_Number__c, 7, &apos;0&apos;) &amp; &quot;-&quot; &amp; TEXT(YEAR( Planned_Delivery_Date__c )) &amp; &quot;-&quot; &amp; LPAD(TEXT(MONTH( Planned_Delivery_Date__c )), 2, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month</label>
    <type>Text</type>
</CustomField>