force-app/main/default/objects/Dispatch_Staging__c/fields/Overall_Transportation_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Transportation_Status__c</fullName>
    <label>Overall Transportation Status</label>
    <length>3</length>
    <type>Text</type>
</CustomField>