force-app/main/default/objects/Dispatch_Staging__c/fields/Pack_Specification__c.field-meta.xml
<CustomField>
    <fullName>Pack_Specification__c</fullName>
    <description>Textual packaging information</description>
    <label>Pack Specification</label>
    <length>20</length>
    <type>Text</type>
</CustomField>