force-app/main/default/objects/Dispatch_Staging__c/fields/Planned_Date_for_End_of_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Planned_Date_for_End_of_Shipment__c</fullName>
    <label>Planned Date for End of Shipment</label>
    <type>Date</type>
</CustomField>