force-app/main/default/objects/Dispatch_Staging__c/fields/Planned_Date_of_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Planned_Date_of_Check_In__c</fullName>
    <label>Planned Date of Check In</label>
    <type>Date</type>
</CustomField>