force-app/main/default/objects/Dispatch_Staging__c/fields/Planned_Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Planned_Delivery_Time__c</fullName>
    <inlineHelpText>Must be in this format 10:00:00</inlineHelpText>
    <label>Planned Delivery Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>