force-app/main/default/objects/Dispatch_Staging__c/fields/Planned_Time_for_Processing__c.field-meta.xml
<CustomField>
    <fullName>Planned_Time_for_Processing__c</fullName>
    <label>Planned Time for Processing</label>
    <length>8</length>
    <type>Text</type>
</CustomField>