force-app/main/default/objects/Dispatch_Staging__c/fields/Process_Date__c.field-meta.xml
<CustomField>
    <fullName>Process_Date__c</fullName>
    <description>Date included in a batch load to the Dispatch object</description>
    <inlineHelpText>Date included in a batch load to the Dispatch object</inlineHelpText>
    <label>Process Date</label>
    <type>DateTime</type>
</CustomField>