force-app/main/default/objects/Dispatch_Staging__c/fields/Process_Error__c.field-meta.xml
<CustomField>
    <fullName>Process_Error__c</fullName>
    <description>Error Message associated with attempted batch load to Dispatch object</description>
    <inlineHelpText>Error Message associated with attempted batch load to Dispatch object</inlineHelpText>
    <label>Process Error</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>