force-app/main/default/objects/Dispatch_Staging__c/fields/Process_Job__c.field-meta.xml
<CustomField>
    <fullName>Process_Job__c</fullName>
    <description>Async Apex Job Id of the batch run that processed this record</description>
    <label>Process Job</label>
    <length>18</length>
    <type>Text</type>
</CustomField>