force-app/main/default/objects/Dispatch_Staging__c/fields/Purchasing_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Document_Number__c</fullName>
    <label>Purchasing Document Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>