force-app/main/default/objects/Dispatch_Staging__c/fields/Record_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Record_Creation_Date__c</fullName>
    <label>Record Creation Date</label>
    <type>Date</type>
</CustomField>