force-app/main/default/objects/Dispatch_Staging__c/fields/Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization__c</fullName>
    <label>Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EN60</fullName>
            </value>
            <value>
                <fullName>VD30</fullName>
            </value>
            <value>
                <fullName>VD10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>