force-app/main/default/objects/Dispatch_Staging__c/fields/Salesforce_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Unique_ID__c</fullName>
    <label>Salesforce Unique ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>