force-app/main/default/objects/Dispatch_Staging__c/fields/SAP_Model_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Model_Number__c</fullName>
    <description>SAP Model Number of Bottle</description>
    <label>SAP Model Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>