force-app/main/default/objects/Dispatch_Staging__c/fields/Scheduling_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_End_Time__c</fullName>
    <label>Scheduling End Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>