force-app/main/default/objects/Dispatch_Staging__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <length>10</length>
    <type>Text</type>
</CustomField>