force-app/main/default/objects/Dispatch_Staging__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <description>Unique combination of Dispatch ID and Pack Specification and Dispatch Date</description>
    <formula>Dispatch_ID__c + &quot;-&quot; + Bottle_Identifier__c + &quot;-&quot; + TEXT(Dispatch_Date__c) + Dispatch_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique ID</label>
    <type>Text</type>
</CustomField>