force-app/main/default/objects/Dispatch_Staging__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <description>Quantity of units in Thousands</description>
    <formula>Bottles__c /1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Units</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>