force-app/main/default/objects/Dispatch_Staging__c/fields/Warehouse_ID__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_ID__c</fullName>
    <description>ID number of warehouse</description>
    <label>Warehouse ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>