force-app/main/default/objects/Dispatch_Staging__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <description>Week of Year, starting from the first Monday</description>
    <formula>CEILING( ( Dispatch_Date__c - First_Monday_of_Year__c + 1) / 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>