force-app/main/default/objects/Dispatch_Staging__c/fields/Week_in_Month__c.field-meta.xml
<CustomField>
    <fullName>Week_in_Month__c</fullName>
    <description>Week in month, starting with week containing first Monday</description>
    <formula>CEILING( ( Planned_Delivery_Date__c - First_Monday_of_Month__c + 1) / 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week in Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>