force-app/main/default/objects/Dispatch_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>Dispatch_ID__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Dispatch_Date__c</columns>
    <columns>Month__c</columns>
    <columns>Process_Status__c</columns>
    <columns>Encirc_Account_Number__c</columns>
    <columns>Delivery_Name__c</columns>
    <columns>Bottle_Identifier__c</columns>
    <columns>SAP_Material_Code__c</columns>
    <columns>Tonnage__c</columns>
    <columns>Units__c</columns>
    <columns>Site_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>