force-app/main/default/objects/Dispatch_Staging__c/listViews/Unprocessed.listView-meta.xml
<ListView>
    <fullName>Unprocessed</fullName>
    <columns>Sales_Organization__c</columns>
    <columns>NAME</columns>
    <columns>Dispatch_ID__c</columns>
    <columns>Dispatch_Date__c</columns>
    <columns>Planned_Delivery_Date__c</columns>
    <columns>Process_Status__c</columns>
    <columns>Process_Error__c</columns>
    <columns>Encirc_Account_Number__c</columns>
    <columns>Bottle_Identifier__c</columns>
    <columns>Calendar_Month__c</columns>
    <columns>SAP_Material_Code__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Process_Status__c</field>
        <operation>equals</operation>
        <value>New,Error</value>
    </filters>
    <label>Unprocessed</label>
</ListView>