force-app/main/default/objects/Dispatch_Staging__c/listViews/Warnings.listView-meta.xml
<ListView>
    <fullName>Warnings</fullName>
    <columns>NAME</columns>
    <columns>Dispatch_ID__c</columns>
    <columns>Unique_ID__c</columns>
    <columns>Dispatch_Date__c</columns>
    <columns>Process_Job__c</columns>
    <columns>Process_Status__c</columns>
    <columns>Process_Error__c</columns>
    <columns>Encirc_Account_Number__c</columns>
    <columns>Delivery_Name__c</columns>
    <columns>Haulier_Name__c</columns>
    <columns>Bottle_Identifier__c</columns>
    <columns>Site_ID__c</columns>
    <columns>Warehouse_ID__c</columns>
    <columns>Month__c</columns>
    <columns>Units__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Process_Status__c</field>
        <operation>equals</operation>
        <value>Warning</value>
    </filters>
    <label>Warnings</label>
</ListView>